# JeanEmotive-volume

./: README.md
JeanEmotiveVol/community-sdk-master/: CMakeLists.txt
JeanEmotiveVol/community-sdk-master/etc/udev/rules.d/: 70-emotiv.rules
JeanEmotiveVol/community-sdk-master/examples_basic/Android/FFTSample/: import-summary.txt
JeanEmotiveVol/community-sdk-master/examples_basic/Android/FFTSample/app/: build.gradle
JeanEmotiveVol/community-sdk-master/examples_basic/Android/FFTSample/app/src/main/: AndroidManifest.xml
JeanEmotiveVol/community-sdk-master/examples_basic/Android/FFTSample/app/src/main/java/com/example/fftsample/: MainActivity.java
JeanEmotiveVol/community-sdk-master/examples_basic/Android/FFTSample/app/src/main/res/layout/: activity_main.xml
JeanEmotiveVol/community-sdk-master/examples_basic/Android/FFTSample/app/src/main/res/menu/: main.xml
JeanEmotiveVol/community-sdk-master/examples_basic/Android/FFTSample/app/src/main/res/values/: strings.xml
JeanEmotiveVol/community-sdk-master/examples_basic/Android/FFTSample/gradle/wrapper/: gradle-wrapper.properties
JeanEmotiveVol/community-sdk-master/include/C#/: DotNetEmotivSDK.csproj  EEGData.cs  EdkDll.cs  EmoEngine.cs  EmoState.cs  EmotivCloudClient.cs  PerformanceMetric.cs
JeanEmotiveVol/community-sdk-master/include/java/com/emotiv/Iedk/: Edk.java  EdkErrorCode.java  EmoState.java  EmotivCloudClient.java  IEegData.java  PerformanceMetrics.java
JeanEmotiveVol/community-sdk-master/lib/Mac/edk.framework/: edk
JeanEmotiveVol/community-sdk-master/lib/Mac/edk.framework/Versions/A/Resources/: Info.plist
JeanEmotiveVol/community-sdk-master/lib/iOS/edk_ios.framework/: Info.plist
JeanEmotiveVol/community-sdk-master/lib/iOS/edk_ios.framework/Headers/: EmotivCloudClient.h  Iedk.h
JeanEmotiveVol/community-sdk-master/lib/iOS/edk_ios.framework/_CodeSignature/: CodeResources
JeanEmotiveVol/community-sdk-master/lib/win32/: edk.lib
JeanEmotiveVol/community-sdk-master/lib/win64/: edk.lib
JeanEmotiveVol/community-sdk-master/tools/: README.md
JeanEmotiveVol/community-sdk-master/tools/EEGLAB_EDF_FIXED/EEGLAB_FixFiles/: getfiletype.m  sopen.m
JeanEmotiveVol/community-sdk-master/tools/XavierComposer/SampleScripts/EPOC/: blink.emo  blink_shorter.emo  clench.emo  clench_lesser.emo  eyebrowRaise.emo  eyebrowRaise_lesser.emo  lift_1.emo  lift_2.emo  lookLeft.emo  lookRight.emo  push_1.emo  push_2.emo  rotateLeft_1.emo  rotateLeft_2.emo  smile.emo  smile_2.emo  winkLeft.emo  winkRight.emo
JeanEmotiveVol/community-sdk-master/tools/XavierComposer/SampleScripts/Insight/: InsightBlink.emo  InsightBlink_shorter.emo  InsightClench.emo  InsightClench_lesser.emo  InsightLift_1.emo  InsightLift_2.emo  InsightPush_1.emo  InsightPush_2.emo  InsightRotateLeft_1.emo  InsightRotateLeft_2.emo  InsightSmile.emo  InsightSmile_2.emo  InsightSurprise.emo  InsightSurprise_lesser.emo  InsightWinkLeft.emo  InsightWinkRight.emo
